// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alternate package name 1`] = `
"'use strict';

var foo = <div>
        <h1>Title</h1>
        <p>This is <strong>bold.</strong>
          Here is a <a href=\\"/some/url\\">link</a>.</p>
      </div>;"
`;

exports[`alternate variable name, with broken-up nested JSX 1`] = `
"'use strict';

var text = <div>
        <p>This is a paragraph <span className=\\"foo\\"> with a <strong>markdown</strong> span inside </span>
        </p>
        <div style={{ margin: 70 }}>
        <p>      And here is a <em>paragraph</em> inside a div.
          <a href=\\"/some/url\\">Link</a>
        </p>
        </div>
      </div>;"
`;

exports[`basic usage 1`] = `
"'use strict';

var foo = <div>
        <h1>Title</h1>
        <p>This is <strong>bold.</strong>
          Here is a <a href=\\"/some/url\\">link</a>.</p>
      </div>;"
`;

exports[`does nothing when module is not in scope 1`] = `
"'use strict';

var _templateObject = _taggedTemplateLiteral(['\\\\n      # Title\\\\n      This is **bold.**\\\\n      Here is a [link](/some/url).\\\\n    '], ['\\\\n      # Title\\\\n      This is **bold.**\\\\n      Here is a [link](/some/url).\\\\n    ']);

function _taggedTemplateLiteral(strings, raw) { return Object.freeze(Object.defineProperties(strings, { raw: { value: Object.freeze(raw) } })); }

function x() {}
var foo = md(_templateObject);"
`;

exports[`import instead of require 1`] = `
"'use strict';

var foo = <div>
        <h1>Title</h1>
        <p>This is <strong>bold.</strong>
          Here is a <a href=\\"/some/url\\">link</a>.</p>
      </div>;"
`;

exports[`require in nested scope 1`] = `
"'use strict';

function x() {
  if (true) {
    var foo = <div>
        <h1>Title</h1>
        <p>This is <strong>bold.</strong>
          Here is a <a href=\\"/some/url\\">link</a>.</p>
      </div>;
  }
}"
`;

exports[`toJsx options 1`] = `
"'use strict';

var foo = <p>This is a paragraph {'{'}{'{'} <span className=\\"foo\\">with a span inside</span> {'}'}{'}'}
        {'{'}{'{'} <div style={'{'}{'{'} margin: 70 {'}'}{'}'}> {'}'}{'}'}
        And <strong>here*</strong> is a div with {Markdown} inside.
        {'{'}{'{'}  {'}'}{'}'}</p>;"
`;
